--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: #f9fbfc;
+  background-color: #e8f0f4;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     
