--- a/components/form.module.css
+++ b/components/form.module.css
@@ -1,6 +1,7 @@
 form.form {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .form-group {
@@ -49,6 +50,8 @@ input.form-control {
   border-radius: 0.25rem;
   border: 1px solid #ccc;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+  height: 2.2rem;
+  margin-top:4px;
 }
 
 .form-group{
@@ -62,12 +65,18 @@ button.btn {
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
   transition: all 0.2s;
   margin-bottom: 10px;
-  margin-top:30px;
+  margin-top:15px;
+  background-color: #1290dd;
+  color: white;
+  border-radius: 0.25rem;
+  border: 1px solid #5a5a58;
+  height: 2.2rem;
+  width:25%;
 }
 
-button.btn:hover {
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+button.btn:hover {  
   transform: translate(-2px, -2px);
+  background-color: #0e69a2;
 }
 
 
@@ -83,4 +92,40 @@ button.btn:hover {
 
 .form-group-fake{
   display: none;
+}
+
+.spinner-background{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  opacity: 0.4;
+  z-index: 99;
+  background-color: grey;
+}
+
+.spinner {
+  border: 5px solid #f3f3f3; /* Light grey */
+  border-top: 5px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 50px;
+  
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+.spinner {
+  border: 5px solid #f3f3f3; /* Light grey */
+  border-top: 5px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 50px;
+  
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
