--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,5 +1,7 @@
 .container {
-  max-width: 38rem;
-  padding: 0 1rem;
-  margin: 3rem auto 6rem;
+  max-width: 1280px;
+  /* padding: 0 1rem; */
+  margin: 0.5rem auto 6rem;
+  background-color: #f9fbfc;
+  border-radius: 10px;
 }
